--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.0.9",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.10",
+    "@nestjs/graphql-workspace": "nestjs/graphql",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.6.7",
     "graphql": "^16.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "ts-morph": "^14.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
