--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/graphql-workspace": "nestjs/graphql",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "3.13.0",
     "apollo-server-express": "^3.6.7",
     "graphql": "^16.4.0",
     "graphql-iso-date": "^3.6.1",
@@ -52,6 +53,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
+    "prisma": "3.13.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
