Add concurrently to execute type generation on mulitplie instances

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
-
+    "dev": "concurrently \"npm:start:dev\" \"npm:gen-typings\" \"npm:prisma:generate\"",
+    "prisma:generate": "prisma generate --watch",
     "gen-typings": "ts-node ./src/generate-typings",
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -35,6 +36,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "3.13.0",
     "apollo-server-express": "^3.6.7",
+    "concurrently": "^7.1.0",
     "graphql": "^16.4.0",
     "graphql-iso-date": "^3.6.1",
     "reflect-metadata": "^0.1.13",
