--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "3.13.0",
     "apollo-server-express": "^3.6.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "concurrently": "^7.1.0",
     "graphql": "^16.4.0",
     "graphql-iso-date": "^3.6.1",
@@ -60,6 +62,7 @@
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
     "prisma": "3.13.0",
+    "prisma-nestjs-graphql": "^15.2.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
