--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "3.13.0",
+    "@types/graphql": "^14.5.0",
     "apollo-server-express": "^3.6.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "concurrently": "^7.1.0",
     "graphql": "^16.4.0",
     "graphql-iso-date": "^3.6.1",
+    "graphql-subscriptions": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
